# LiveKit-for-Frappe-v3

./: .env.example  .gitignore  COOLIFY-KONFIGURATION.md  Caddyfile  README.md  REPO_TRIAGE_PHASENLISTE.md  REPO_TRIAGE_STUFE1.md  components.json  config  docker-compose.ports-alt.example.yml  docker-compose.template.yml  docker-compose.yml  globals.css  index  layout.tsx  livekit.yaml  package-lock.json  package.json  packed-refs  vitest.config.ts
.cursor/: rules
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  SYNC-REPORT-2026-04-19.md  config.json
apps/agent/: .env.example  Dockerfile  WHITE_LABELING.md  agent.py  pyproject.toml  requirements.txt
apps/agent/scripts/: spike_agentsession_no_llm.py
apps/agent/src/: audio_buffer_patch.py  audio_prebuffer_patch.py  frappe_mcp.py  mcp_errors.py  metrics_listener.py  mistral_agent.py  mistral_llm.py  mistral_orchestrator.py  mistral_tts_cpu_patch.py  mode_config.py  model_factory.py  piper_server.py  piper_tts.py  tts_text_transforms.py  voice_diagnostics.py
apps/agent/tests/: test_agent.py  test_agent_entrypoint_branching.py  test_audio_buffer_patch.py  test_filler_prewarm.py  test_frappe_mcp_helpers.py  test_mcp_integration.py  test_mistral_agent.py  test_mistral_llm.py  test_mistral_orchestrator.py  test_mistral_tts_cpu_patch.py  test_mode_env_validation.py  test_mode_failure_policy.py  test_mode_switch.py  test_model_factory.py  test_piper_server.py  test_piper_tts.py  test_tts_text_transforms.py  test_voice_diagnostics.py
components/: LiveKitProvider.tsx  root-layout.tsx
embed-popup/: action-bar.tsx
heads/: main
infrastructure/: README.md  docker-compose.yml  livekit.config.yaml  livekit.yaml  package.json
readme/: AGENT_PROMPT.md  COOLIFY-KONFIGURATION.md  Frappe-MCP-Wissensbasis.md  MISTRAL-AGENT.md  SCHULUNG_GUIDE.md  humanisierung-der-voxtral-agenten.md
(+121 files in other folders)
